--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -6,7 +6,7 @@ RUN pip install --no-cache-dir --only-binary :all: -U pip && \
 WORKDIR /code/
 COPY . .
 RUN python setup.py bdist_wheel && \
-    find . -type f -name *.whl -exec check-wheel-contents {} \;
+    find dist/ -type f -name *.whl -exec check-wheel-contents {} \;
 
 
 # App
