--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -7,7 +7,7 @@ WORKDIR /code/
 COPY . .
 RUN python setup.py bdist_wheel && \
     find dist/ -type f -name *.whl -exec check-wheel-contents {} \;
-
+CMD ["bash"]
 
 # App
 ARG PYTHON_VERSION="3.9.0"
