--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -1,21 +1,49 @@
-# Build
+## Build Stage
 ARG PYTHON_VERSION="3.9.0"
 FROM python:$PYTHON_VERSION-slim as build
 ENV PIP_DISABLE_PIP_VERSION_CHECK=1
-RUN pip install --no-cache-dir --only-binary :all: -U pip && \
-    pip install --no-cache-dir --only-binary :all: -U wheel setuptools check-wheel-contents
+ENV PIP_NO_CACHE_DIR=0
+
+# Upgrade pip and then install build tools
+RUN pip install -U pip && \
+    pip install -U wheel setuptools check-wheel-contents
+
 WORKDIR /code/
+
+# Build The Application and validate wheel contents
 COPY . .
 RUN python setup.py bdist_wheel && \
     find dist/ -type f -name *.whl -exec check-wheel-contents {} \;
+
+# For debugging the Build Stage    
 CMD ["bash"]
 
-# App
+
+## App Stage
 ARG PYTHON_VERSION="3.9.0"
 FROM python:$PYTHON_VERSION-alpine3.12 as app
-ENV PIP_DISABLE_PIP_VERSION_CHECK=1
-RUN pip install --no-cache-dir --only-binary :all: -U pip
+
 WORKDIR /app/
-COPY --from=build /code/dist/ /app/
-RUN find . -type f -name *.whl -exec pip install --no-cache-dir {} \; -exec rm {} \;
+
+ENV PIP_DISABLE_PIP_VERSION_CHECK=1
+ENV PIP_NO_CACHE_DIR=0
+ENV HOME="$PWD"
+ENV PATH="/app/.local/bin:${PATH}"
+
+# Run as a non-root user
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup -s sh --gecos "" --disabled-password --home "$PWD"
+USER appuser
+
+# Upgrade pip
+RUN pip install -U pip
+
+# Copy artifacts and requirements.txt from Build Stage
+COPY --from=build /code/requirements.txt /code/dist/ ./
+
+# Install requirements
+RUN pip install -r requirements.txt && \
+    rm requirements.txt
+
+# Install the application from local wheel package
+RUN find . -type f -name *.whl -exec pip install {} \; -exec rm {} \;
 CMD ["appy"]
