--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,14 +27,14 @@ jobs:
           python -m unittest discover -s tests -v
       - name: Build and publish
         env:
-          # TWINE_USERNAME: ${{ secrets.PIP_USERNAME }}
-          # TWINE_PASSWORD: ${{ secrets.PIP_PASSWORD }}
-          # TWINE_NON_INTERACTIVE: true
+          TWINE_USERNAME: ${{ secrets.PIP_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PIP_PASSWORD }}
+          TWINE_NON_INTERACTIVE: true
           RELEASE_REF: ${{ github.ref }}
         run: |
           RELEASE=0.0.1
           RELEASE_VERSION=$(echo "$RELEASE_REF" | sed "s|refs\/tags\/v||g")
           echo -n $RELEASE_VERSION > ./version
           python setup.py sdist bdist_wheel
-# twine check ./dist/*
-# twine upload dist/*
+          twine check ./dist/*
+          twine upload dist/*
