migrate from setup.py to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,46 @@
 [metadata]
-description-file = README.md
-long_description_content_type = text/markdown
+name = unfor19-appy
+description = Python project template
+license = MIT
+long-description-content-type = text/markdown
+long-description = file: README.md
+keywords =
+    python
+    project
+    template
+url = https://github.com/unfor19/python-project
+platforms = any
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Topic :: Software Development :: Build Tools
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Operating System :: POSIX :: Linux
+    Operating System :: Unix
+    Operating System :: MacOS
+    Operating System :: Microsoft :: Windows    
+author = Meir Gabay
+author-email = unfor19@gmail.com
+
+[options]
+setup-requires =
+    wheel>0.34.2
+    setuptools>=44.1.0
+install-requires =
+    requests>=2.24.0
+    pillow>=8.0.1
+packages = find:
+package_dir =
+    =appy
+include-data-package = True
+
+[options.packages.find]
+where = appy
+
+
+[options.entry_points]
+console-scripts =
+    appy = appy.__main__:main
