move structure to src

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,29 +1,29 @@
 [options]
-setup-requires =
+setup_requires =
     wheel>0.34.2
     setuptools>=44.1.0
-install-requires =
+install_requires =
     requests>=2.24.0
     pillow>=8.0.1
 packages = find:
 package_dir =
-    =appy
-include-data-package = True
+    =src
+include_package_data = True
 
 [options.packages.find]
-where = appy
+where = src
 
 
 [options.entry_points]
-console-scripts =
+console_scripts =
     appy = appy.__main__:main
 
 [metadata]
 name = unfor19-appy
 description = Python project template
 license = MIT
-long-description-content-type = text/markdown
-long-description = file: README.md
+long_description_content_type = text/markdown
+long_description = file: README.md
 keywords =
     python
     project
@@ -43,4 +43,4 @@ classifiers =
     Operating System :: MacOS
     Operating System :: Microsoft :: Windows    
 author = Meir Gabay
-author-email = unfor19@gmail.com
+author_email = unfor19@gmail.com
