--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
-graft appy
-global-exclude *.py[cod] __pycache__
+graft src/appy
+include version main.py requirements.txt
+global-exclude *.py[cod] __pycache__ *.so Dockerfile.* .dockerignore
