--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -41,7 +41,7 @@ RUN pip install -U pip
 COPY --from=build /code/requirements.txt /code/dist/ ./
 
 # Install requirements
-RUN jpeg-dev zlib-dev
+RUN apk add --no-cache jpeg-dev zlib-dev
 RUN pip install -r requirements.txt && \
     rm requirements.txt
 
