--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -30,6 +30,9 @@ ENV PIP_NO_CACHE_DIR=0
 ENV HOME="$PWD"
 ENV PATH="/app/.local/bin:${PATH}"
 
+# Install OS requirements
+RUN apk add --no-cache jpeg-dev zlib-dev
+
 # Run as a non-root user
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup -s sh --gecos "" --disabled-password --home "$PWD"
 USER appuser
@@ -41,7 +44,6 @@ RUN pip install -U pip
 COPY --from=build /code/requirements.txt /code/dist/ ./
 
 # Install requirements
-RUN apk add --no-cache jpeg-dev zlib-dev
 RUN pip install -r requirements.txt && \
     rm requirements.txt
 
