--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
         PIP_NO_CACHE_DIR: 0
+        DOCKER_TAG: unfor19/appy:latest
 
     steps:
       - uses: actions/checkout@v2
@@ -25,9 +26,10 @@ jobs:
       - name: Test
         run: |
           python -m unittest discover -s tests -v
-      - name: Build and Push to DockerHub
+      - name: Build Docker Image
         run: |
-          export DOCKER_TAG="unfor19/appy:latest"
           docker build . --file Dockerfile.multistage --tag "${DOCKER_TAG}"
+      - name: Push to DockerHub
+        run: |
           echo '${{ secrets.DOCKER_PASSWORD }}' | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker push "${DOCKER_TAG}"
