--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools==44.1.0 wheel==0.34.2 twine==3.1.1
+          pip install -r requirements.txt
       - name: Test
         run: |
           python -m unittest discover -s tests -v
