--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,14 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: "3.9"
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.0.0          
+      - name: Release Version
+        run: |
+          export RELEASE_VERSION=${GITHUB_REF_SLUG}
+          bash scripts/version_validation.sh
+          echo -n $RELEASE_VERSION > ./version
+          echo "::set-env name=RELEASE_VERSION::${RELEASE_VERSION}"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -28,8 +36,6 @@ jobs:
           python -m unittest discover -s tests -v
       - name: Build Package
         run: |
-          RELEASE_VERSION=$(echo "$RELEASE_REF" | sed "s|refs\/tags\/v||g")
-          [[ $RELEASE_VERSION = *.*.* ]] && echo -n $RELEASE_VERSION > ./version
           python setup.py sdist bdist_wheel
           twine check ./dist/*
       - name: Publish to PyPi
@@ -38,8 +44,7 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PIP_PASSWORD }}
           TWINE_NON_INTERACTIVE: true
         run: |
-          RELEASE_VERSION=$(echo "$RELEASE_REF" | sed "s|refs\/tags\/v||g")
-          [[ $RELEASE_VERSION = *.*.* ]] && twine upload ./dist/* || true
+          twine upload ./dist/*
 
   dockerhub:
     runs-on: ubuntu-latest
@@ -49,6 +54,14 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: "3.9"
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.0.0          
+      - name: Release Version
+        run: |
+          export RELEASE_VERSION=${GITHUB_REF_SLUG}
+          bash scripts/version_validation.sh
+          echo -n $RELEASE_VERSION > ./version
+          echo "::set-env name=RELEASE_VERSION::${RELEASE_VERSION}"          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -58,8 +71,6 @@ jobs:
           python -m unittest discover -s tests -v
       - name: Build and Push to DockerHub
         run: |
-          RELEASE_VERSION=$(echo "$RELEASE_REF" | sed "s|refs\/tags\/v||g")
-          [[ ! $RELEASE_VERSION =~ *.*.* ]] && exit 0
           export DOCKER_TAG="unfor19/appy:${RELEASE_VERSION}"
           docker build . --file Dockerfile --tag "${DOCKER_TAG}"
           echo '${{ secrets.DOCKER_PASSWORD }}' | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
