--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,8 @@ jobs:
           export RELEASE_VERSION=${GITHUB_REF_SLUG}
           bash scripts/version_validation.sh
           echo -n $RELEASE_VERSION > ./version
-          echo "::set-env name=RELEASE_VERSION::${RELEASE_VERSION}"          
+          export _DOCKER_TAG="unfor19/appy:${RELEASE_VERSION}"
+          echo "::set-env name=DOCKER_TAG::${_DOCKER_TAG}"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -69,9 +70,10 @@ jobs:
       - name: Test
         run: |
           python -m unittest discover -s tests -v
-      - name: Build and Push to DockerHub
+      - name: Build Docker Image
         run: |
-          export DOCKER_TAG="unfor19/appy:${RELEASE_VERSION}"
           docker build . --file Dockerfile --tag "${DOCKER_TAG}"
+      - name: Push to DockerHub
+        run: |
           echo '${{ secrets.DOCKER_PASSWORD }}' | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker push "${DOCKER_TAG}"
