--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
           export RELEASE_VERSION=${GITHUB_REF_SLUG}
           bash scripts/version_validation.sh
           echo -n $RELEASE_VERSION > ./version
-          echo "::set-env name=RELEASE_VERSION::${RELEASE_VERSION}"
+          echo "{RELEASE_VERSION}={${RELEASE_VERSION}}" >> $GITHUB_ENV
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -62,7 +62,7 @@ jobs:
           bash scripts/version_validation.sh
           echo -n $RELEASE_VERSION > ./version
           export _DOCKER_TAG="unfor19/appy:${RELEASE_VERSION}"
-          echo "::set-env name=DOCKER_TAG::${_DOCKER_TAG}"
+          echo "{DOCKER_TAG}={${_DOCKER_TAG}}" >> $GITHUB_ENV
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
