--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,12 +20,15 @@ jobs:
           python-version: "3.9"
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@3.0.0          
-      - name: Release Version
+      - name: Set Release Version
         run: |
           export RELEASE_VERSION=${GITHUB_REF_SLUG}
-          bash scripts/version_validation.sh
           echo -n $RELEASE_VERSION > ./version
           echo "{RELEASE_VERSION}={${RELEASE_VERSION}}" >> $GITHUB_ENV
+      - name: Validate Release Version
+        run: |
+          echo $GITHUB_ENV
+          bash scripts/version_validation.sh
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -56,13 +59,17 @@ jobs:
           python-version: "3.9"
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@3.0.0          
-      - name: Release Version
+      - name: Set Release Version
         run: |
           export RELEASE_VERSION=${GITHUB_REF_SLUG}
           bash scripts/version_validation.sh
           echo -n $RELEASE_VERSION > ./version
-          export _DOCKER_TAG="unfor19/appy:${RELEASE_VERSION}"
-          echo "{DOCKER_TAG}={${_DOCKER_TAG}}" >> $GITHUB_ENV
+          echo "{RELEASE_VERSION}={${RELEASE_VERSION}}" >> $GITHUB_ENV
+          echo "{DOCKER_TAG}={unfor19/appy:${RELEASE_VERSION}}" >> $GITHUB_ENV
+      - name: Validate Release Version
+        run: |
+          echo $GITHUB_ENV
+          bash scripts/version_validation.sh          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
