--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           export RELEASE_VERSION=${GITHUB_REF_SLUG}
           echo -n $RELEASE_VERSION > ./version
-          echo "{RELEASE_VERSION}={${RELEASE_VERSION}}" >> $GITHUB_ENV
+          echo "{RELEASE_VERSION}=${RELEASE_VERSION}" >> $GITHUB_ENV
       - name: Validate Release Version
         run: |
           echo $GITHUB_ENV
@@ -64,8 +64,9 @@ jobs:
           export RELEASE_VERSION=${GITHUB_REF_SLUG}
           bash scripts/version_validation.sh
           echo -n $RELEASE_VERSION > ./version
-          echo "{RELEASE_VERSION}={${RELEASE_VERSION}}" >> $GITHUB_ENV
-          echo "{DOCKER_TAG}={unfor19/appy:${RELEASE_VERSION}}" >> $GITHUB_ENV
+          echo "{RELEASE_VERSION}=${RELEASE_VERSION}" >> $GITHUB_ENV
+          export _DOCKER_TAG="unfor19/appy:${RELEASE_VERSION}"
+          echo "{DOCKER_TAG}=${_DOCKER_TAG}" >> $GITHUB_ENV
       - name: Validate Release Version
         run: |
           echo $GITHUB_ENV
