--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -5,6 +5,7 @@ on:
     branches: [master]
     paths-ignore:
       - "README.md"
+      - ".github/workflows/release.yml"
 
 jobs:
   dockerhub-latest:
