--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -33,4 +33,4 @@ jobs:
       - name: Push to DockerHub
         run: |
           echo '${{ secrets.DOCKER_PASSWORD }}' | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker push "${DOCKER_TAG}"
+          docker push "${DOCKER_TAG}" && echo "Pushed $DOCKER_TAG"
