--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools==50.3.2 wheel==0.35.1 twine==3.1.1 check-wheel-contents
+          pip install setuptools==50.3.2 wheel==0.35.1 twine==3.1.1
           pip install -r requirements.txt
       - name: Test
         run: |
@@ -42,7 +42,6 @@ jobs:
       - name: Build Package
         run: |
           python setup.py sdist bdist_wheel
-          find dist/ -type f -name *.whl -exec check-wheel-contents {} \;
           twine check ./dist/*
       - name: Publish to PyPi
         env:
