update setup.cfg with comments

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,18 @@
+### Change according to your package's requirements
 [options]
+python_requires = '~=3.3',
 setup_requires =
     wheel>=0.35.1
     setuptools>=50.3.2
 install_requires =
     requests>=2.24.0
     pillow>=8.0.1
+### ------------------------------------------------------------------
+
+
+
+### Keep the same structure, Should NOT be changed
+### Remember - create __init__.py in each directory that is a package
 packages = find:
 package_dir =
     =src
@@ -12,18 +20,28 @@ include_package_data = True
 
 [options.packages.find]
 where = src
+### -------------------------------------------------------------------
 
 
+
+### Relevant for packages that can be executed in command-line
+### If your package does NOT support command-line, remove this section
 [options.entry_points]
 console_scripts =
     appy = appy.__main__:main
+### ------------------------------------------------------------------
 
+
+
+### Change according to your package's metadata
 [metadata]
 name = unfor19-appy
 description = Python project template
-license = MIT
 long_description_content_type = text/markdown
 long_description = file: README.md
+author = Meir Gabay
+license = MIT
+author_email = unfor19@gmail.com
 keywords =
     python
     project
@@ -41,6 +59,5 @@ classifiers =
     Operating System :: POSIX :: Linux
     Operating System :: Unix
     Operating System :: MacOS
-    Operating System :: Microsoft :: Windows    
-author = Meir Gabay
-author_email = unfor19@gmail.com
+    Operating System :: Microsoft :: Windows
+### ------------------------------------------------------------------
