--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
-### Change according to your package's requirements
+### Change according to your package's requirements ------------------
 [options]
 python_requires = '~=3.3',
 setup_requires =
@@ -33,7 +33,7 @@ console_scripts =
 
 
 
-### Change according to your package's metadata
+### Change according to your package's metadata ----------------------
 [metadata]
 name = unfor19-appy
 description = Python project template
