--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ install_requires =
 
 ### Keep the same structure, Should NOT be changed
 ### Remember - create __init__.py in each directory that is a package
+# [options] <--- we're here
 packages = find:
 package_dir =
     =src
@@ -20,7 +21,7 @@ include_package_data = True
 
 [options.packages.find]
 where = src
-### -------------------------------------------------------------------
+### ------------------------------------------------------------------
 
 
 
@@ -35,18 +36,23 @@ console_scripts =
 
 ### Change according to your package's metadata ----------------------
 [metadata]
-name = unfor19-appy
-description = Python project template
-long_description_content_type = text/markdown
-long_description = file: README.md
+name = unfor19-appy  # pip install unfor19-appy
+
 author = Meir Gabay
 license = MIT
 author_email = unfor19@gmail.com
+url = https://github.com/unfor19/python-project
+### ------------------------------------------------------------------
+
+### SEO details as will appear in PyPi -------------------------------
+# [metadata] <--- we're here
+description = Python project template
+long_description_content_type = text/markdown
+long_description = file: README.md
 keywords =
     python
     project
     template
-url = https://github.com/unfor19/python-project
 platforms = any
 classifiers =
     Development Status :: 5 - Production/Stable
