--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 ### Change according to your package's requirements ------------------
 [options]
-python_requires = '~=3.3',
+python_requires = '~=3.3'
 setup_requires =
     wheel>=0.35.1
     setuptools>=50.3.2
