update project urls

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,12 +36,13 @@ console_scripts =
 
 ### Change according to your package's metadata ----------------------
 [metadata]
-name = unfor19-appy  # pip install unfor19-appy
-
+name = unfor19-appy
 author = Meir Gabay
 license = MIT
 author_email = unfor19@gmail.com
 url = https://github.com/unfor19/python-project
+project_urls = 
+    Documentation = https://github.com/unfor19/python-project/wiki
 ### ------------------------------------------------------------------
 
 ### SEO details as will appear in PyPi -------------------------------
